<resources>
    <string name="app_name">mad pet doctor</string>
    <string name="Logo">LOGO</string>
    <string name="background_template">Background_Template</string>
    <string name="footer">Footer</string>
    <string name="sidebarbutton1">SideBarButton1</string>
    <string name="sidebarbutton2">SideBarButton2</string>
    <string name="user_icon">User_Icon</string>
    <string name="username">UserName</string>
    <string name="search">Search</string>
    <string name="background_template2">Background_Template2</string>
    <string name="doctor_text">Doctor_Text</string>
    <string name="pet_foot01">Pet_Foot01</string>
    <string name="pet_foot2">Pet_Foot2</string>
    <string name="pet_foot3">Pet_Foot3</string>
    <string name="doc_details">Doct_Details</string>
    <string name="medical_details">Medical_Details</string>
    <string name="other_details">Other_details</string>
    <string name="medical_center">Mdeical_Center</string>
    <string name="otherdetails">OtherDetails</string>
    <string name="mapview">MapView</string>
    <string name="vaccine_report">Vaccine_Report</string>
    <string name="reporticon">ReportIcon</string>
    <string name="addreporticon">AddReportIcon</string>
    <string name="petcardheading">PetCardHeading</string>
    <string name="petcard">PetCard</string>
    <string name="peticon">PetIcon</string>
    <string name="id">ID</string>
    <string name="idtext">IDText</string>
    <string name="name">PetName</string>
    <string name="breed">Breed</string>
    <string name="dateofbirth">DateofBirth</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="ownername">OwnerName</string>
    <string name="ownernametext">OwnerNameText</string>
    <string name="weighttext">WeightText</string>
    <string name="gendertext">GenderText</string>
    <string name="agetext">AgeText</string>
    <string name="dateofbirthtext">DateofBirthText</string>
    <string name="breedtext">BreedText</string>
    <string name="nametext">NameText</string>
    <string name="petcardsave">PetCardSave</string>
    <string name="radiobutton">RadioButton</string>
    <string name="yesradiobutton">YesRadioButton</string>
    <string name="noradiobutton">NoRadioButton</string>
    <string name="vaccinereportsave">VaccineReportSave</string>
    <string name="vaccinepricetext">VaccinePriceText</string>
    <string name="vaccineprice">VaccinePrice</string>
    <string name="vaccinedate">VaccineDate</string>
    <string name="vaccinenametext">VaccineNameText</string>
    <string name="nurcelogovaccinedetails">NurceLogoVaccineDetails</string>
    <string name="activitymainsidebar">ActivityMainSideBar</string>
    <string name="sidebarimage">SideBarImage</string>
    <string name="mainsidebardoctor">MainSIdeBarDoctor</string>
    <string name="mainsidebarpetcarddetails">MainSideBarPetCardDetails</string>
    <string name="mainsidebarmedicalcenters">MainSideBarMedicalCenters</string>
    <string name="mainsidebarlogout">MainSideBarLogout</string>
    <string name="mainsidebaraccount">MainSideBarAcoount</string>
    <string name="mainsidebarblogs">MainSideBarBlogs</string>
    <string name="mainsidebarvaccinedetails">MainSideBarVaccineDetails</string>
    <string name="mainsidebardetailsofpets">MainSideBarDetailsofPets</string>
    <string name="mainsidebaracoounts">MainSideBarAccounts</string>
    <string name="dogpageheading">DogPageHeading</string>
    <string name="dogpageintroduction">DogPageIntroduction</string>
    <string name="dogpageoriginofbreed">DogPageOriginofBreed</string>
    <string name="dogpagenutritionandgrowth">DogPageNutritionandGrowth</string>
    <string name="dogpagediseasesandvaccines">DogPageDiseasesandVaccines</string>
    <string name="dogpageimage4">DogPageImage4</string>
    <string name="dogpageimage3">DogPageImage3</string>
    <string name="dogpageimage2">DogPageImage2</string>
    <string name="dogpageimage1">DogPageImage1</string>
    <string name="catpageheading">CatPageHeading</string>
    <string name="catpageintroductionlayer">CatPageIntroductionLayer</string>
    <string name="catpageintroduction">CatPageIntroduction</string>
    <string name="catpageoriginofbreedlayer">CatPageOriginofBreesLayer</string>
    <string name="catpageorigineofbreed">CatPageOriginofBreed</string>
    <string name="catpagenutritionandgrowth">CatPageNutitionAndGrowth</string>
    <string name="catpagenutritionandgrowths">CatPageNutritionAndGrowths</string>
    <string name="catpagediseasesandvaccineslayout">CatPageDiseasesAndVaccinesLayout</string>
    <string name="catpagediseasesandvaccines">CatPageDiseasesAndVaccines</string>
    <string name="catpageintrodutionimage">CatPageIntroductionImage</string>
    <string name="catpageoriginofbreed">CatPageOriginofBreed</string>
    <string name="catpagenutritionandgrwoth">CatPageNutritionAndGrwoth</string>
    <string name="catpagedeasesandvaccines">CatPageDeasesAndVaccines</string>
    <string name="detailsofpetpage">DetailsofPetPage</string>
    <string name="detailsofpetpagedoglayer">DetailsofPetPageDogLayer</string>
    <string name="detailsofpetpagedog">DetailsofPetPageDog</string>
    <string name="detailsofpetpagecatlayer">DetailsofPetpageCatLayer</string>
    <string name="detailsofpetpagecat">DetailsofPetPageCat</string>
    <string name="detailsofpetpageimage1">DetailsofPetPageImage1</string>
    <string name="detailsofpetpageimage2">DetailsofPetPageImage2</string>
    <string name="petcarddetailsimage1">PetCardDetailsImage1</string>
    <string name="petcarddetailssearchbar">PetCardDetailsSearchBar</string>
    <string name="introductionsofdogs">IntroductionofDogs</string>
    <string name="introductiondogsearchbar">IntroductionDogSearchBar</string>
    <string name="introductionofdogimage">IntroductionofDogImage</string>
    <string name="introductionofdogdescription">IntroductionofDogDescription</string>
    <string name="introductionofcats">IntroductionofCats</string>
    <string name="introductionodcatdescription">IntroductionofCatDescrption</string>
    <string name="introductionofcatimage">IntroductionofCatImage</string>
    <string name="introductioncatsearchbar">IntroductionCatSearchBar</string>
    <string name="originofbreeddog">OriginofBreedDog</string>
    <string name="originofbreeddescription">OriginofBreedDescription</string>
    <string name="originofbreedimage">OriginofBreedImage</string>
    <string name="originfobreedsearchbar">OriginofBreedSearchBar</string>
    <string name="originofbreedcatsearchbar">OriginofBreedCatSearchBar</string>
    <string name="originofbreedcatdescription">OriginofBreedCatDescription</string>
    <string name="originofbreedcat">OriginofBreedCat</string>
    <string name="originofbreedcatimage">OriginofBreedCatImage</string>
    <string name="nuritionandgrowthsearchbar">NutritionAndGrowthSearchBar</string>
    <string name="nuritionandgrowthheading">NuritionAndGrowthHeading</string>
    <string name="dognutritionandgrowth">DogNutritionAndGrowth</string>
    <string name="dognutritionandgrowthdescription">DogNutritionAndGrowthDescrption</string>
    <string name="catnutritionandgrowthheading">CatNutritionAndgrowthHeading</string>
    <string name="catnuritionandgrowthsearchbar">CatNutrionAndGrowthSearchBar</string>
    <string name="catnutritionandgrowthdescrption">CatNutritionAndGrowthDescrption</string>
    <string name="catnutritionandgrowthimage">CatNutritionAndGrowthDescrption</string>
    <string name="dogdiseasesandvaccines">DogDiseasesAndVaccines</string>
    <string name="dogdiseasesandvaccinesheading">DogDiseasesAndVaccinesHeading</string>
    <string name="diseasesandvaccinesdescription">DiseasesAndVaccinesDescription</string>
    <string name="diseasesandvaccinesimage">DiseasesAndVaccinesImage</string>
    <string name="catdiseasesandvaccinessearchbar">CatDiseasesAndVaccineSearchBar</string>
    <string name="catdiseasesandvaccinesheading">CatDiseasesAndVaccineHeading</string>
    <string name="catdiseasesandvaccinesdescrption">CatDiseasesAndVaccinesDescription</string>
    <string name="catdiseasesandvaccinesimage">CatDiseasesAndVaccinesImage</string>
    <string name="doctorusericon1">DoctorUserIcon1</string>
    <string name="doctorusericon2">DoctorUserIcon2</string>
    <string name="doctorname1">DoctorName1</string>
    <string name="doctorname2">DoctorUsername2</string>
    <string name="hospitallog1">HospitalLogo1</string>
    <string name="hospitallogo2">HospitalLogo2</string>
    <string name="otherdetails1">OtherDetails1</string>
    <string name="otherdetails2">OtherDetails2</string>
    <string name="nutritionandgrowthdesc">NutritionAndGrowthDesc</string>
    <string name="catoriginofbreeddesc">CatOriginOfBreedDesc</string>
    <string name="catdiseasesdesc">CatdieseasesDesc</string>
    <string name="catintrodesc">CatIntroDesc</string>
    <string name="dogintrodesc">DogIntroDesc</string>
    <string name="dogdiseasesdesc">DogDiseasesDesc</string>
    <string name="dognutritiondesc">DogNutritionDesc</string>
    <string name="dogoriginofbreeddesc">DogOriginOfBreedDesc</string>
    <string name="cattopic">CatTopic</string>
    <string name="catintro">CatIntro</string>
    <string name="catoob">CatOOB</string>
    <string name="catnag">CatNAG</string>
    <string name="catdav">CatDAV</string>
    <string name="dogheadings">DogHeadings</string>
    <string name="dogintro">DogIntro</string>
    <string name="originofbreeds">OriginOfBreeds</string>
    <string name="nutritionandgrowth">NutritionAndGrowth</string>
    <string name="diseasesandvaccines">DiseasesAndVaccines</string>
    <string name="vrheading">VRHeading</string>
    <string name="vdpetid">VDPetId</string>
    <string name="vdvaccinename">VDVaccineName</string>
    <string name="vdvaccinedate">VDVaccineDate</string>
    <string name="vdvaccineprice">VDVaccinePrice</string>
    <string name="catImage1">CatImage1</string>
    <string name="pcownernames">PCOwnerNames</string>
    <string name="pcpetid">PCPetId</string>
    <string name="pcweights">PCWeight</string>
    <string name="pcgender">PCGender</string>
    <string name="pcages">PCAges</string>
    <string name="pcdateofbirth">PCDateofBirth</string>
    <string name="pcbreeds">PCBreeds</string>
    <string name="pcpetnames">PCPetNames</string>
    <string name="dopdetailsofpets">DopDetailsOfPets</string>
    <string name="dopcats">DOPCats</string>
    <string name="updatebutton">UpdateButton</string>
    <string name="table1">Table1</string>
    <string name="table2">Table2</string>
    <string name="Doctor">Doctor</string>
    <string name="petcarddetails">PetCardDetails</string>
    <string name="medicalenter">MedicalCenter</string>
    <string name="vaccinedetails">VaccineDetails</string>
    <string name="detailsofpets">DetailsOfPets</string>
    <string name="accounts">Accounts</string>
    <string name="blogs">Blogs</string>
    <string name="contactus">ContactUs</string>
    <string name="logout">LogOut</string>
    <string name="auth_proceedWithYou">Proceed With You</string>
    <string name="auth_loginText">Login</string>
    <string name="auth_emailText">Email</string>
    <string name="auth_emailEditText" />
    <string name="auth_passwordText">Password</string>
    <string name="auth_passwordEditText" />
    <string name="auth_loginbtn">Login</string>
    <string name="auth_forgotPasswordText">Forgot Password?</string>
    <string name="auth_dontHaveanAcc">DONT HAVE AN ACCOUNT SIGN UP</string>
    <string name="createAcc_textView">Create Account</string>
    <string name="createAcc_nameText">Name</string>
    <string name="chanagePasswordText">Reset Your Password ?</string>
    <string name="chanagePasswordbtn">Change Password</string>
    <string name="newPasswordEditText">New Password</string>
    <string name="confirmPasswordEditText">Confirm Password</string>
</resources>