<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHome">

    <ImageView
        android:id="@+id/adminBacground"
        android:layout_width="412dp"
        android:layout_height="733dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_template" />

    <ImageView
        android:id="@+id/adminNavBar"
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:contentDescription="@string/footer"
        app:srcCompat="@drawable/footer"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="10dp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip10"
        android:layout_width="44dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/sidebarbutton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip11"
        android:layout_width="44dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/sidebarbutton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView50"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pet_doc_2"
        tools:layout_editor_absoluteY="17dp" />

</androidx.constraintlayout.widget.ConstraintLayout>